--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-eslint": "^1.8.1"
