--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "stylelint": "^16.6.1",
+    "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-eslint": "^1.8.1"
