--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "server": "npx json-server db.json",
+    "dev": "concurrently \"vite\" \"npx json-server db.json\"",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx",
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.12.2",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -31,7 +38,9 @@
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
     "stylelint": "^16.6.1",
+    "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-eslint": "^1.8.1"
